[package]
name = "dbkit-engine"
version = "0.0.8"
authors = ["Milosz Tanski <milosz@gmail.com>"]
license = "Apache-2.0/MIT"
description = "A columnar query execution engine"

repository = "https://github.com/mtanski/dbkit"

[dependencies]
toml = "^0.2"
log = "^0.3"
itertools = "^0.4"

[lib]
name = "dbkit_engine"
path = "src/lib.rs"
